feat: add business custom domain lifecycle
